--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-vue": "^0.8.1",
